update js files

--- a/index.html
+++ b/index.html
@@ -28,15 +28,14 @@
     
     <main>
 
-    <div class="card" style="width: 18rem;">
+    <div id="card">
         <div class="card-header"></div>
-            <ul class="list-group list-group-flush"></ul>
+          <h1>Take the Disney Quiz & beat the highest score</h1>
+            <button class="btn btn-primary score-btn" type="button">High Scores</button>
     </div>
 
-    <div class="d-grid gap-2 col-6 mx-auto">
-        <button class="btn btn-primary" type="button" id="">Start</button>
-        <button class="btn btn-primary next-btn" type="button">Next</button>
-        <button class="btn btn-primary score-btn" type="button">High Scores</button>
+    <div class="start-screen">
+        <button class="btn btn-primary" type="button" id="">Start Quiz</button>
     </div>
 
 
@@ -46,7 +45,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
     <script src="assets/js/myQ.js"></script>
-    <script src="assets/js/scripts.js"></script>
+    <script src="assets/js/hsLogic.js"></script>
+    <script src="./assets/js/scripts.js"></script>
 
 </body>
 </html>
