start button & timer works

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     
     <main>
 <!-- Start Screen -->
-    <div class="start-btn">
+    <div class="start">
         <h1>Take the Disney Quiz & beat the highest score before your time runs out</h1>
-        <button class="btn btn-primary">Start Quiz</button>
+        <button id="start-btn" class="btn btn-primary">Start Quiz</button>
     </div>
 
 <!-- Quiz Card -->
@@ -87,7 +87,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
     <script src="assets/js/myQ.js"></script>
-    <script src="assets/js/hsLogic.js"></script>
+    <!-- <script src="assets/js/hsLogic.js"></script> -->
     <script src="./assets/js/scripts.js"></script>
 
 </body>
