questions from myQ.js won't display on card

--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
       <h2 class="timer">Timer:</h2>
       
       <div id="question-card" class="card" style="width: 18rem;">
-        <div id= "question" class="card-header">
+        <div id= "question-line" class="card-header">
           Question
         </div>
-        <ul class="list-group list-group-flush">
-          <li id="A" class="list-group-item">A. </li>
-          <li id="B" class="list-group-item">B.</li>
-          <li id="C" class="list-group-item">C.</li>
-          <li id="D" class="list-group-item">D.</li>
+        <ul id=q-list class="list-group list-group-flush">
+          <li id="opt-a" class="list-group-item">A. </li>
+          <li id="opt-b" class="list-group-item">B. </li>
+          <li id="opt-c" class="list-group-item">C. </li>
+          <li id="opt-d" class="list-group-item">D. </li>
         </ul>
       </div>
     
